01-Platform-Architecture-and-Infrastructure/01-resource-quota.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: resource-quota-example
