01-Platform-Architecture-and-Infrastructure/02-LimitRange.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: limit-range-example
