01-Platform-Architecture-and-Infrastructure/03-Storage.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: storage-example
---
apiVersion: v1
kind: Pod
metadata:
  name: myapp
  namespace: storage-example

spec:
  containers:
  - name: myapp
    image: nginx:latest
    resources:
      limits:
        memory: "128Mi"
        cpu: "500m"
    ports:
      - containerPort: 80
    volumeMounts:
    - mountPath: /data
      name: db-storage
  volumes:
  - name: db-storage
    persistentVolumeClaim:
      claimName: db-pvc
