01-Platform-Architecture-and-Infrastructure/04-netwroking-ingress-service.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: networking-ingress-service-example
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  namespace: networking-ingress-service-example
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-web
  template:
    metadata:
      labels:
        app: nginx-web
    spec:
      containers:
        - name: nginx
          image: nginx:latest
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: networking-ingress-service-example
spec:
  type: ClusterIP
  selector:
    app: nginx-web
  ports:
    - name: http
      port: 80
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deployment
  namespace: networking-ingress-service-example
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-echo
  template:
    metadata:
      labels:
        app: api-echo
    spec:
      containers:
        - name: http-echo
          image: hashicorp/http-echo:1.0.0
          args:
            - "-listen=:5678"
            - "-text=hello from API"
          ports:
            - containerPort: 5678
---
apiVersion: v1
kind: Service
metadata:
  name: api-service
  namespace: networking-ingress-service-example
spec:
  type: ClusterIP
  selector:
    app: api-echo
  ports:
    - name: http
      port: 80
      targetPort: 5678
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: networking-ingress-service-example
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: api-service
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-service
                port:
                  number: 80
